# vc_simd_fast_rsqrt

./: CMakeLists.txt  main.cpp
